fix(TDP-3995): deal with overflow for IE11

--- a/dataprep-webapp/src/app/components/widgets/modal/_modal.scss
+++ b/dataprep-webapp/src/app/components/widgets/modal/_modal.scss
@@ -359,7 +359,7 @@
 			margin: 0;
 			padding: 0;
 			width: auto;
-			overflow: auto;
+			overflow: hidden;
 		}
 
 		&-content {
